rearrange display of assembly; fix bug when fetching variable fails; fix bug when truncating max lines in console

--- a/gdbgui/static/css/gdbgui.css
+++ b/gdbgui/static/css/gdbgui.css
@@ -159,6 +159,11 @@ td.assembly{
     padding-top: 0px;
     white-space: nowrap;
 }
+/* instruction content */
+.instrContent{
+    min-width: 250px;
+    display:inline-block;
+}
 #code_table{
     font-family: monospace;
     border-collapse: separate;
